<resources>
    <string name="app_name">Krios</string>
    <string name="email_hint">Email ID *</string>
    <string name="password">Password *</string>
    <string name="firstname"> First Name *</string>
    <string name="middelname">Middel Name </string>
    <string name="lastname">Last Name *</string>
    <string name="confirmpassword">Confirm Password *</string>
    <string name="submit">Submit</string>
    <string name="createanaccount">Create an Account</string>
    <string name="login">Login</string>
    <string name="your_string_here"> <u>Forgot Your Password?</u></string>
    <string name="title_activity_main">Krios</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="review_product">    <u>Be the first to review this product</u></string>
    <string name="today_deal_symbol">    <u> &amp;lt&amp;lt  </u></string>
    <string name="sample_string">Trendy Design \nHighly durable shine and strength \nRust Proof </string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_cart">Cart</string>
    <string name="action_logout">Logout</string>
    <string name="action_tools">Tools</string>
    <string name="review">How do you rate this product?</string>
    <string name="Quality">Quality</string>
    <string name="Price">Price</string>
    <string name="Value">Value</string>
    <string name="hiperlink"> <u>  >>  </u></string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_wish_list">"Wish List"</string>


</resources>
