<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/searchbar"
        android:actionLayout="@layout/searchbarmenuxml"
        android:icon="@drawable/shape_notification"
        android:title="Search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/badge"
        android:actionLayout="@layout/feed_update_count"
        android:icon="@drawable/shape_notification"
        android:title="Cart badge"
        app:actionViewClass="android.support.v7.widget.ActionMenuView"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_cart"
        android:icon="@mipmap/cart"
        android:orderInCategory="100"
        android:title="@string/action_cart"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:icon="@mipmap/login"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_menu_camera"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_menu_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="never" />
</menu>
