<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/grey"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:background="@drawable/white_square"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="vertical">


            <EditText
                android:id="@+id/etEmial_ID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/grey_square"
                android:drawableLeft="@mipmap/user"
                android:hint="@string/email_hint"
                android:padding="5dp"
                android:paddingLeft="5dp"
                android:textColor="@color/orange"
                android:textColorHint="@color/orange" />


            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/grey_square"
                android:drawableLeft="@mipmap/password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="5dp"
                android:paddingLeft="5dp"
                android:textColor="@color/orange"
                android:textColorHint="@color/orange" />


            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/buttonselector"
                android:drawableRight="@mipmap/login"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:text="@string/login"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingTop="20dp"
                android:text="@string/your_string_here"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/orange" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp"
        android:layout_weight="2"
        android:gravity="center|top"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnCreate_Account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonselector"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/createanaccount"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>

