<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/grey"
    android:gravity="center"
    tools:context=".Customer_Registration">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/white_square"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Personal Infromation"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/orange" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/EditText_First_Name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/grey_square"
                        android:drawableLeft="@mipmap/edit"
                        android:hint="@string/firstname"
                        android:padding="5dp"
                        android:paddingLeft="5dp"
                        android:textColor="@color/orange"
                        android:textColorHint="@color/orange" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/etMiddle_Name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/grey_square"
                        android:drawableLeft="@mipmap/edit"
                        android:hint="@string/middelname"
                        android:padding="5dp"
                        android:paddingLeft="5dp"
                        android:textColor="@color/orange"
                        android:textColorHint="@color/orange" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/EditText_Last_Name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/grey_square"
                        android:drawableLeft="@mipmap/edit"
                        android:hint="@string/lastname"
                        android:padding="5dp"
                        android:paddingLeft="5dp"
                        android:textColor="@color/orange"
                        android:textColorHint="@color/orange" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/EditText_Emial_ID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/grey_square"
                        android:drawableLeft="@mipmap/user"
                        android:hint="@string/email_hint"
                        android:padding="5dp"
                        android:paddingLeft="5dp"
                        android:textColor="@color/orange"
                        android:textColorHint="@color/orange" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sign Up for Newsletter"
                        android:textColor="@color/orange" />
                </LinearLayout>

                <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="horizontal">-->

                <!--<TextView-->
                <!--android:id="@+id/textView3"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="Login Infromation"-->
                <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
                <!--android:textColor="@color/orange" />-->
                <!--</LinearLayout>-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/EditText_Password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/grey_square"
                        android:drawableLeft="@mipmap/password"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="5dp"
                        android:paddingLeft="5dp"
                        android:textColor="@color/orange"
                        android:textColorHint="@color/orange" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/EditText_Confirm_Password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/grey_square"
                        android:drawableLeft="@mipmap/password"
                        android:hint="@string/confirmpassword"
                        android:inputType="textPassword"
                        android:padding="5dp"
                        android:paddingLeft="5dp"
                        android:textColor="@color/orange"
                        android:textColorHint="@color/orange" />

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_weight="3.5"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Button_Create_Account"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/buttonselector"
                android:padding="3dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>